# moderator-bot

./: .dockerignore  .env  .env.example  .env.prod-db.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.dev.yaml  docker-compose.yaml  filters.py  loader.py  nginx.dev.conf  nginx.prod-db.conf  pyproject.toml  pytest.ini  requirements.txt  sql_start.sql  test.py  test2.py  test_def_insert.py  test_hand.py  test_sql.py  throttling.py
.github/workflows/: test.yml
Trash/: create_tables.py
alembic/: env.py
alembic/versions/: 08a895a93f06_merge_collation_fix_and_auto_delete_.py  7063911b6e60_fix_is_captcha_enabled_column_type_from_.py  73a429eaabbb_fix_collation_version_mismatch_for_.py  7d4b7f6991af_initial_migration.py  97c024e13e5c_add_additional_columns_for_metadata_.py  a1b2c3d4e5f6_add_auto_delete_join_leave_to_chats.py
app/application/services/: agent_service.py  agent_tools.py  buttons.py  history.py  moderation.py  moderation_service.py  report.py  spam.py  telegram_stats.py  user_service.py
app/core/: config.py  container.py  logging.py
app/domain/: agent.py  entities.py  exceptions.py  models.py  repositories.py  value_objects.py
app/infrastructure/db/: session.py
app/infrastructure/db/repositories/: __init__.py  admin.py  agent.py  chat.py  chat_link.py  message.py  user.py
app/presentation/api/: __init__.py  main.py
app/presentation/api/routers/: agent.py  chats.py
app/presentation/api/schemas/: agent.py  chat.py
app/presentation/telegram/: __init__.py  __main__.py  bot.py  logger.py
app/presentation/telegram/handlers/: __init__.py  admin.py  events.py  groups.py  moderation.py  service.py  start.py  webapp.py
app/presentation/telegram/middlewares/: __init__.py  admin.py  black_list.py  chat_type.py  dependencies.py  history.py  managed_chats.py
app/presentation/telegram/utils/: __init__.py  blacklist.py  callback_data.py  filters.py  other.py
bot/: __init__.py  __main__.py  bot.py  logger.py
bot/handlers/: __init__.py  admin.py  events.py  groups.py  moderation.py  service.py  start.py
bot/middlewares/: __init__.py  admin.py  black_list.py  db.py  dependencies.py  history.py  managed_chats.py
bot/services/: buttons.py  history.py  moderation.py  report.py  spam.py
bot/utils/: buttons.py  filters.py  other.py
data/: __init__.py  config.py  welcome.txt
database/: base.py  crud.py  database.py  models.py  session.py
database/repositories/: __init__.py  admin.py  chat.py  chat_link.py  message.py  user.py
db/: alchemy_decl.py  create_tables.sql  moder_bot.db  sql_aclhemy.py  sql_sqlalchemy.py  sqlite.py
defs/: __init__.py  command_set.py  def_start_sql.py  gen_button.py  get_mention.py  mute_date.py
filters/: __init__.py  admins.py  chats.py  group_chat.py  next_back_univ_less.py  start_button.py  super_admins.py  user_chat.py
handlers/: __init__.py  admin_commands.py  get_chats.py  hand_test.py  memes_handlers.py  mute_ban_message.py  other_handlers.py  welcome_messages.py
handlers/admins/: __init__.py  command_settings.py  sql_commands.py
handlers/groups/: __init__.py  meme_gays.py  mute_ban_message.py  welcome_messages.py
handlers/users/: __init__.py  hand_test.py  sql_commands.py  test.py
keyboards/default/: __init__.py  start_menu.py
keyboards/inline/: button_abous_us.py  button_chat.py  button_school.py  button_welcome.py  db_list.py  start_in_menu.py
middlewares/: throttling.py
scripts/: insert_chat_links.sql  prod-db-connect.sh  sql_start.sql  wait_for_postgres.sh
sql_scripts/: create_tables.sql
tests/: README.md  conftest.py  factories.py  telegram_helpers.py  test_admin_repository.py  test_chat_repository.py  test_user_repository.py
tests/e2e/: test_user_workflow.py
tests/handlers/: __init__.py  test_admin_handlers.py  test_blacklist_improvements.py  test_dependency_injection.py  test_events_handlers.py  test_moderation_handlers.py  test_router_integration.py
tests/integration/: test_chat_repository.py  test_user_repository.py
tests/middleware/: __init__.py  test_blacklist_middleware.py
tests/performance/: __init__.py  test_repository_performance.py
tests/unit/: test_application_services.py  test_domain_entities.py  test_domain_exceptions.py  test_filters.py  test_middlewares.py  test_moderation_service.py  test_user_service.py  test_value_objects.py
tests/utils/: test_blacklist_utils.py
texts/: welcome.txt
utils/: __init__.py  notify_admins.py  set_bot_commands.py
utils/dp_api/: __init__.py
webapp/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
webapp/src/: App.css  App.tsx  main.tsx
webapp/src/components/: ActionConfigPanel.tsx  AgentChat.tsx  AgentManager.tsx  BulkActionExecutor.tsx  BulkChatManager.tsx  ChatBulkActions.tsx  ChatCard.tsx  ChatList.tsx  ChatSelectionPanel.tsx
webapp/src/services/: agentApi.ts  api.ts
webapp/src/types/: chat.ts  index.ts
webapp/src/utils/: mockData.ts
