[project]
name = "moderator-bot"
version = "0.1.0"
description = "Telegram bot for moderating educational chats."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.5",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-decouple>=3.8",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "watchgod>=0.8",
    "pytz>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
packages = ["app", "tests"]
strict = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aiosqlite>=0.20",
    "ruff>=0.12.4",
]
